# ApaTypeAnalysis

./: .gitignore  README.md
analysis/: ApaTypeAnalysis.cabal  run
analysis/examples/: Example1.hs  Example2.hs  Example3.hs
analysis/src/: Expr.hs  Lexer.hs  Main.hs  Parser.hs  Typechecker.hs
reports/plan/: plan.tex
reports/report/: report.tex
reports/rules/: rules.tex
