name:                ApaTypeAnalysis
version:             0.1.0.0
synopsis:            Control-flow analysis of a subset of haskell
-- description:         
homepage:            https://github.com/detrumi/ApaTypeAnalysis
-- license:             
author:              Frank, Wilco
maintainer:          wilcokusee@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable ApaTypeAnalysis
  main-is:             Main.hs
  -- other-modules:       
  hs-source-dirs:      src
  build-depends:       base, parsec, fgl, mtl, containers
